# worktime

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
src/worktime/: cli.py  db.py  models.py
