[project]
name = "worktime"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Björn Ricks", email = "bjoern.ricks@gmail.com" }]
requires-python = ">=3.12"
license = "MIT"
dependencies = ["rich>=13.9.4"]

[project.scripts]
worktime = "worktime.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
